<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fondo"
    tools:context=".TableLayout">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtMenu"
            style="@style/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/txtMenu" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnDisc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnDisc"
                    android:onClick="backMenu"/>

                <Button
                    android:id="@+id/btnRadio"
                    android:onClick="goRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnRadio" />

                <Button
                    android:id="@+id/btnSpiner"
                    android:onClick="goSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnSpiner" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnCheck"
                    android:onClick="goCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnCheck" />

                <Button
                    android:id="@+id/btnRecycler"
                    android:onClick="goRecycler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnRecycler" />

                <Button
                    android:id="@+id/btnExtra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnExtra" />

            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/btnBackMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnBackMain"
            android:onClick="Salir"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>