<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Disc">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/img1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/img1"
                android:onClick="img1"
                android:src="@mipmap/cov1" />

            <ImageButton
                android:id="@+id/img2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/img2"
                android:onClick="img2"
                android:src="@mipmap/cov2" />

            <ImageButton
                android:id="@+id/img3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/img3"
                android:onClick="img3"
                android:src="@mipmap/cov3" />

            <ImageButton
                android:id="@+id/img4"
                android:onClick="img4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/cov4"
                android:contentDescription="@string/img4"
                />

            <ImageButton
                android:id="@+id/img5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/img5"
                android:onClick="img5"
                android:src="@mipmap/cov5" />

            <ImageButton
                android:id="@+id/img6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/img6"
                android:onClick="img6"
                android:src="@mipmap/cov6" />

            <Button
                android:id="@+id/btnBack"
                style="@style/MyButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="back"
                android:gravity="center"
                android:text="@string/btnBack"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="16dp"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>