<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fondo"
    tools:context=".RadioButtonView">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="318dp"
        android:layout_height="98dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="59dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/txtRadioSalida"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRadio">

        <RadioButton
            android:id="@+id/idRadio1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/idRadio1" />

        <RadioButton
            android:id="@+id/idRadio2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/idRadio2" />
    </RadioGroup>

    <TextView
        android:id="@+id/txtRadio"
        style="@style/txtTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="64dp"
        android:gravity="center"
        android:text="@string/txtRadio"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRadioSalida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="109dp"
        android:onClick="volverMenu"
        android:text="@string/btnRadioSalida"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnValidar" />

    <TextView
        android:id="@+id/txtRadioSalida"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="43dp"
        android:text="@string/txtRadioSalida"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/btnValidar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/btnValidar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="105dp"
        android:text="@string/btnValidar"
        app:layout_constraintBottom_toTopOf="@+id/btnRadioSalida"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRadioSalida" />
</androidx.constraintlayout.widget.ConstraintLayout>