<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpinnerView"
    android:background="@mipmap/fondo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        android:gravity="center"
        android:stretchColumns="*"        >

        <TextView
            android:id="@+id/txtSpinner"
            style="@style/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:text="@string/txtSpinner"
            android:textSize="26dp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:layout_marginBottom="50dp" />

        <TextView
            android:id="@+id/txtSalidaSpinner"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:gravity="center"
            android:layout_marginBottom="50dp"
            android:text="@string/txtSalidaSpinner"
            android:textSize="24dp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/btnValidarSpinner"
            android:layout_width="150dp"
            android:onClick="mostrarSpinner"
            android:layout_height="wrap_content"
            android:text="@string/btnValidarSpinner"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/btnSalir"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/btnSalir"
            android:onClick="SalirMenu"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>